WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275259
Scaled scroller with event handler results in invalid wheel event Region
https://bugs.webkit.org/show_bug.cgi?id=275259
Summary
Scaled scroller with event handler results in invalid wheel event Region
Simon Fraser (smfr)
Reported
2024-06-07 10:43:30 PDT
We need to clamp rectangles used to create event regions.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-06-07 10:43:47 PDT
<
rdar://118512508
>
Simon Fraser (smfr)
Comment 2
2024-06-07 10:45:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29626
EWS
Comment 3
2024-06-07 14:46:23 PDT
Committed
279837@main
(2658d9543648): <
https://commits.webkit.org/279837@main
> Reviewed commits have been landed. Closing PR #29626 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug