Scaled scroller with event handler results in invalid wheel event Region https://bugs.webkit.org/show_bug.cgi?id=275259 rdar://118512508

Reviewed by Alan Baradlay.

If we need to generate an event region which has huge root-relative bounds (due to nested scales),
make sure we clamp the result returned by `absoluteBoundingBoxRect()` to be a valid IntRect.

* LayoutTests/fast/scrolling/mac/region-decoding-failure-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/region-decoding-failure.html: Added.
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::absoluteBoundingBoxRect const):

Canonical link: https://commits.webkit.org/279837@main